songs-service/k8s/overlays/prod/songs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: songs  
spec:
  rules:
    - host: right-lyrics.apps.cluster-3fa6.sandbox31.opentlc.com
      http:
        paths:
          - path: /api/songs
            pathType: Prefix
            backend:
              service:
                name: songs-service
                port: 
                  number: 8080
